fix: better link color for dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -140,7 +140,7 @@
   --accent: oklch(0.541 0.281 293.009);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
-  --link: oklch(0.546 0.245 262.881);
+  --link: oklch(0.707 0.165 254.624);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.811 0.10563 293.683 / 0.8);
